--- a/cylindrical-batteries-lines.html
+++ b/cylindrical-batteries-lines.html
@@ -365,7 +365,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
-            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring performance, safety, and quality validation for various consumer applications.</p>
+            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring capacity performance, safety, and quality validation for various consumer applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
