--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -381,7 +381,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
