--- a/other-machines.html
+++ b/other-machines.html
@@ -419,10 +419,10 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BMS in India" title="BMS in India"></a>
+        <a href="#" title="BMS Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">BMS</h5>
+            <h5 class="card-title text-center">BMS Tester</h5>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
