--- a/agv-auto-transportation.html
+++ b/agv-auto-transportation.html
@@ -2,36 +2,36 @@
 <html lang="en">
 <head>
   <head>
-<!-- Title -->
-<title>BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies</title>
+ <!-- Title -->
+  <title>AGV Auto Transportation | Smart Material Handling Solutions - Indygreen Technologies</title>
 
-<!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies provides advanced BESS container assembly lines for Lithium Battery Lines systems — ensuring efficient assembly, testing, and integration of battery packs for renewable energy, industrial, and commercial applications." />
+  <!-- Meta Description -->
+  <meta name="description" content="Indygreen Technologies provides AGV auto transportation systems for smart, automated material handling in lithium battery and solar manufacturing lines, improving efficiency and safety." />
 
-<!-- Meta Keywords -->
-<meta name="keywords" content="BESS container assembly lines, Lithium Battery Lines, battery pack assembly line, BESS production line, battery testing and integration, containerized battery solutions, Indygreen Technologies" />
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="AGV auto transportation, automated guided vehicle, smart material handling, AGV system India, battery factory AGV, solar panel manufacturing AGV, industrial automation transport, factory logistics automation, AGV material transfer, robotic transportation system" />
 
-<!-- Canonical Tag -->
-<link rel="canonical" href="https://www.indygreentech.com/bess-container-assembly-lines.html" />
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
-<meta property="og:description" content="High-efficiency BESS container assembly lines for lithium batteries — designed for assembly, testing, and integration of battery packs in containerized energy storage systems." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.indygreentech.com/bess-container-assembly-lines.html" />
-<meta property="og:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
-<meta property="og:site_name" content="Indygreen Technologies" />
+  <!-- Author & Publisher -->
+  <meta name="author" content="Indygreen Technologies" />
+  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
-<meta name="twitter:description" content="Advanced BESS container assembly lines for Lithium Battery Lines — ensuring efficient assembly, testing, and integration for industrial, commercial, and renewable energy applications." />
-<meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
-<meta name="twitter:site" content="@IndygreenTech" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="AGV Auto Transportation | Smart Material Handling Solutions" />
+  <meta property="og:description" content="Automated guided vehicles (AGVs) by Indygreen Technologies provide intelligent, safe, and efficient material transportation across solar and battery production facilities." />
+  <meta property="og:url" content="https://www.indygreentech.com/agv-auto-transportation.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Indygreen Technologies" />
 
-   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome for icons -->
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AGV Auto Transportation | Smart Material Handling Solutions" />
+  <meta name="twitter:description" content="Indygreen Technologies offers automated guided vehicle (AGV) systems for efficient material movement in battery and solar manufacturing lines." />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.indygreentech.com/agv-auto-transportation.html" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
