--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Your browser does not support the video tag.
 </div>
 <p>INDYGREEN TECHNOLOGIES is the brainchild of a research scholar and powered by experienced professionals with over 15 years of expertise in renewable energy solutions. As a dynamic and forward-looking company, we are committed to bridging the global energy deficit by promoting green, clean, sustainable, and renewable energy sources. Our vision is to contribute to a greener planet for future generations.</p>
 
-<p>With unmatched technical knowledge and commercial expertise, we specialize in delivering innovative, cost-effective, and high-quality factory setup solutions for the solar energy and electric vehicle (EV) industries. From designing production lines to providing turnkey execution, we ensure that our clients’ factories are established as successful, efficient, and profitable production units.</p>
+<p>With unmatched technical knowledge and commercial expertise, we specialize in delivering innovative, cost-effective, and high-quality factory setup solutions for the solar energy and Lithium Battery Industry. From designing production lines to providing turnkey execution, we ensure that our clients’ factories are established as successful, efficient, and profitable production units.</p>
 <p>
   We collaborate with global technology leaders, investors, project developers, and government agencies to bring the latest green and renewable technologies to market. Guided by our motto, “Your Green Partner,” we strive to revolutionize industries through sustainable energy innovations that make our planet greener and cleaner.
 </p>
